Fixed issue with status code detail not showing up

--- a/chrome/css/styles.scss
+++ b/chrome/css/styles.scss
@@ -456,6 +456,18 @@ li .right {
     width: 306px;
 }
 
+#sidebar-search-cancel {
+    cursor: pointer;
+    opacity: 0.2;
+    position: absolute;
+    top: 10px;
+    right: 15px; 
+}
+
+#sidebar-search-cancel:hover {
+    opacity: 0.4;
+}
+
 #collection-items .request-actions {
     margin-left: 270px;
     opacity: 1;
